--- a/_source/core/_html.pug
+++ b/_source/core/_html.pug
@@ -2,4 +2,4 @@ extends /_source/_layouts/core
 block append update_vars
   - path  = ['core',path].join('/')
 block nav
-  p: +site_nav('core')
+  div: +site_nav('core')
