--- a/_source/mallet/_html.pug
+++ b/_source/mallet/_html.pug
@@ -2,4 +2,4 @@ extends /_source/_layouts/mallet
 block append update_vars
   - path  = ['mallet',path].join('/')
 block nav
-  p: +site_nav('mallet')
+  div: +site_nav('mallet')
