--- a/_source/nova/404.html.pug
+++ b/_source/nova/404.html.pug
@@ -1,9 +1,8 @@
 extends _html
 block append vars
-  -
-    path   = '404.html'
-    title  = `Not found`
-    description = `The content you are looking for is not here.`
+  - path   = '404.html'
+  - title  = `Not found`
+  - description = `The content you are looking for is not here.`
 block content
   .flex(style="margin:1rem auto 3rem auto")
     .fit(style="font-size:4rem;padding:.8rem;") 🤷
