--- a/_source/nova/index.html.pug
+++ b/_source/nova/index.html.pug
@@ -1,5 +1,4 @@
 extends _html
 block append vars
-  -
-    path   = 'index.html'
-    title  = `Home`
+  - path   = 'index.html'
+  - title  = `Home`
