--- a/_source/nova/preview.html.pug
+++ b/_source/nova/preview.html.pug
@@ -1,7 +1,6 @@
 extends _html
 block append vars
-  -
-    path   = 'preview.html'
-    title  = `Preview`
+  - path   = 'preview.html'
+  - title  = `Preview`
 block content
   include /_includes/preview.html
