--- a/_scss/mallet/css/style.scss
+++ b/_scss/mallet/css/style.scss
@@ -7,7 +7,7 @@
 ._960 { max-width:960px; @extend .mc; }
 // ---------------------------------------------------------------
 // fixes
-#header { padding:1rem }
+#header { padding:1rem 0 }
 #_title._logo a {
   display: inline-block;
   padding: 13px 0;
