--- a/_scss/mallet/css/style.scss
+++ b/_scss/mallet/css/style.scss
@@ -10,7 +10,7 @@
 #header { padding:1rem 0 }
 #_title._logo a {
   display: inline-block;
-  padding: 13px 0;
+  margin: 13px 0;
 }
 .hero { color:#000;line-height:1.1 }
 .footnotes{border:none}
