--- a/_scss/_dove/base.scss
+++ b/_scss/_dove/base.scss
@@ -8,7 +8,7 @@ html,body{margin:0}
 body{overflow-y:scroll}
 hr { border: 1px solid $grey }
 h1,h2,h3,h4,h5,h6 { margin-block-start:1.5rem;margin-block-end:1rem }
-p,details { margin-block-start:1rem;margin-block-end:1rem }
+p,blockquote,details { margin-block-start:1rem;margin-block-end:1rem }
 pre { padding:.5rem;overflow:auto }
 code,tt { background-color: rgba($grey,.3);padding:0 .25em}
 pre { code,tt {background:none} }
@@ -22,10 +22,7 @@ a {
   &:hover { color:$text-blue }
 }
 article {
-  img {
-    max-width: 100%;
-    box-sizing: content-box;
-  }
+  img { max-width:100%;box-sizing:content-box }
   table {
     & { border-collapse: collapse }
     &, td, th { border: 1px solid $grey }
