--- a/_source/_layouts/nova.pug
+++ b/_source/_layouts/nova.pug
@@ -26,25 +26,27 @@ block html
         +custom_head
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     body
-      ._views: ._view
-        header._header: ._layoutx
-          block header
-            //- code // header
-            .flex
-              .fill: +logo
-              .fit: +theme_switch
-        nav._nav: ._layoutx._960
-          block nav
-            p: code // nav
-        main._main: article._article._layoutx._960
-          block content
-            h1 !{title}
-            p: code // content for : !{title}
-        footer._footer: ._layoutx._960
-          block footer
-            hr/
-            p: code // footer
-            hr/
-            p.text-right.text-grey: small: +edit_link(path)
-      block custom_body
-        +custom_body
+      ._views
+        ._view: ._layoutx
+          header._header: ._layoutx
+            block header
+              //- p: code // header
+              +logo
+          nav._nav: ._layoutx._960
+            block nav
+              p: code // nav
+          main._main: article._article._layoutx._960
+            block content
+              h1 !{title}
+              p: code // content for : !{title}
+          footer._footer: ._layoutx._960
+            block footer
+              hr/
+              p: code // footer
+              hr/
+              p.text-right.text-grey: small: +edit_link(path)
+        ._view: ._layout._1020
+          +theme_switch
+        block custom_body
+          +custom_body
+      //- ._views
