--- a/_layouts/mallet.html
+++ b/_layouts/mallet.html
@@ -4,64 +4,46 @@ layout: mallet
 <!doctype html>
 <html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="no_js {{ page.layout }}_layout">
   <!--
-    page.path   : {{ page.path }}
-    page.layout : {{ page.layout }}
+    path   : {{ page.path }}
+    layout : jekyll/{{ page.layout }}
   -->
   <head>
     <meta charset="{{ site.encoding | default: 'utf-8' }}" />
     {% seo %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=5.0,shrink-to-fit=no" />
-    <meta id="_theme-color"  name="theme-color"  content="{{ page.theme_color | default: site.theme_color | default: '' }}" />
     <meta id="_color-scheme" name="color-scheme" content="{{ page.color_scheme | default: site.color_scheme | default: 'light dark' }}" />
-    <link id="_style" rel="stylesheet" href="{{ site.github.url }}/assets/mallet/css/style.css?v={{ site.github.build_revision }}" />
+    <meta id="_theme-color"  name="theme-color"  content="{{ page.theme_color | default: site.theme_color | default: '' }}" />
+    <link id="_style" rel="stylesheet" href="{{ site.github.url }}/assets/mallet/css/style.css?v={{ site.revision }}.{{ site.github.build_revision }}" />
     {% include custom-head.html %}
     <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"><![endif]-->
   </head>
   <body>
     <main id="_main" class="_app __fadein">
-      <div id="_layout" class="container-lg px-3 markdown-body mb-6">
-        {% if page.bar != 'hide' and site.bar != 'hide' -%}
-        <header id="header">
-          <nav id="_header-bar">
-            <div class="_flex my-2">
-              <div class="_flex-main">
-                {% if page.url == '' or page.url == '/' %}{% else -%}
-                  {% if page.show_title != 'hide' and site.show_title != 'hide' and site.title and site.title != page.title -%}
-                    <h1 id="_title"><a href="{{ site.github.url }}">{{ site.title }}</a></h1>
-                  {%- endif %}
-                {%- endif %}
-              </div>
-              <div id="_topmenu">
-                {% if site.github.private != true and site.github.license -%}
-                <a
-                  class="_bt -h -square _m0"
-                  title="View source on Github"
-                  href="{{ site.github.repository_url }}"><i class="_ico -svg"><svg viewBox="0 0 24 24"><path fill="currentColor" fill-opacity="1" d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"></path></svg></i></a>
-                {%- endif %}
-                <a
-                  class="_bt -h -square _m0"
-                  title="Change theme (Ctrl+Alt+T)"
-                  href="?change_theme"
-                  onclick="event.preventDefault();window.base?.theme.change();"><i class="_ico -svg"><svg viewBox="0 0 24 24"><path fill="currentColor" fill-opacity="1" d="M19,3H14V5H19V18L14,12V21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,18H5L10,12M10,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H10V23H12V1H10V3Z"></path></svg></i></a>
-              </div>
-            </div>
-          </nav>
+      <div id="_layout" class="container-lg px-3 markdown-body">
+        <header class="header"><nav id="_header-bar"><div class="_flex"><div class="_flex-main">
+          <div class="_logo"><a href="{{ site.github.url }}">{{ site.title }}</a></div>
         </header>
-        {%- endif %}
+        <nav class="_nav">
+          <p><code>// nav</code></p>
+        </nav>
         <article id="_article">{{ content }}</article>
-        <div class="footer mt-5">
-          <hr>
+        <footer class="footer">
+          <hr/>
+          <p><code>// footer</code></p>
+          <hr/>
           {% if site.github.private != true and site.github.license %}
-          <div class="pt-3 text-right text-gray">This site is open source. {% github_edit_link "Improve this page" %}.</div>
+          <div class="text-right text-gray">This site is open source. {% github_edit_link "Improve this page" %}.</div>
           {%- endif %}
-          <div class="pt-3 text-right text-gray">{% include credit.html %}</div>
         </div>
       </div>
+      <div class="_theme_switch _needjs">
+        <a class="_bt -h"
+          href="?change_theme"
+          title="Change theme (Ctrl+Alt+T)"
+          onclick="event.preventDefault();window.base?.theme.change();"><i class="_ico -svg"><svg viewBox="0 0 24 24"><path fill="currentColor" fill-opacity="1" d="M19,3H14V5H19V18L14,12V21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,18H5L10,12M10,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H10V23H12V1H10V3Z"></path></svg></i></a>
+      </div>
     </main>
-    {% include credit.html %}
-    <script src="{{ site.github.url }}/assets/mallet/js/script.js?v={{ site.github.build_revision }}"></script>
-    {% include anchors.html %}
     {% include custom-body.html %}
   </body>
 </html>
