--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,1 +1,1 @@
-<div class="_copyright _copyright_text">By Techie Joe 2025</div>
+<div class="_copyright"><span class="_copyright_text">@ by {{site.author||'Unknown'}} {{site.year||''}}</span></div>
