--- a/_source/_layouts/_main.pug
+++ b/_source/_layouts/_main.pug
@@ -101,8 +101,7 @@ mixin edit_link(path)
 
 mixin anchor
   script(src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous")
-  script.
-    anchors?.add();
+  script|anchors?.add();
 
 mixin google_analytics
   if google_analytics
@@ -134,7 +133,7 @@ mixin custom_body
   +copyright
   +credit
   +themejs
-  //- +anchor
+  +anchor
   +google_analytics
 
 mixin _bull
