--- a/_source/_layouts/mallet.pug
+++ b/_source/_layouts/mallet.pug
@@ -1,6 +1,6 @@
 include _main
 mixin mallet_theme_switch(title='Change Theme (Alt+T)')
-  ._theme_switch._needjs: a(href='#' onclick!=onclick(js.themeChange) title=title)._bt.-h
+  ._theme_switch._needjs: a(href='#' onclick!=onclick(js.themeChange) title=title)._bt.-h.-flat
     +isvg(svgi.compare)
 block vars
   -
