--- a/_source/_layouts/_main.pug
+++ b/_source/_layouts/_main.pug
@@ -7,10 +7,9 @@ include /_config
   today = now.toGMTString()
   year  = now.getFullYear()
 
-  //- append 
   subs = now.getHours()*100+now.getMinutes()*100+now.getSeconds()
-  version = [version,subs].join('.')
   revision = [revision,subs].join('.')
+  v_v = [version,revision].join('.')
 
   js   = {
     //- javascripts
@@ -45,21 +44,28 @@ include /_config
     'display=swap',
   ]
 
+//- ==============================================================
 //- functions
 -
   onclick = ( _script='' ) => 'event.preventDefault();' + _script;
   capitalize = s => s.replace(/\w\S*/g, w => w[0].toUpperCase() + w.slice(1).toLowerCase());
 
+//- ==============================================================
 include _mixins
 
+mixin custom_head
+  |<!-- custom-head -->
+  //- +fonts
+  //- +icons
+  //- +manifest
+
 mixin fonts
-  if fonts
-    link(rel="preconnect" href="https://fonts.googleapis.com")/
-    link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)/
-    link(rel="stylesheet" href="https://fonts.googleapis.com/css2?"+fonts.join('&'))#_fonts/
+  link(rel="preconnect" href="https://fonts.googleapis.com")/
+  link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)/
+  link(rel="stylesheet" href="https://fonts.googleapis.com/css2?"+fonts.join('&'))#_fonts/
 
 mixin icons
-  //- : prioritization sequence: first match, exact-size, type, then "any".
+  //- prioritization sequence: first match, exact-size, type, then "any".
   link(rel="apple-touch-icon" type="image/png"     sizes="180x180" href=site_url+"/icons/apple-touch-icon.png")/
   link(rel="icon"             type="image/png"     sizes="32x32"   href=site_url+"/icons/favicon-32x32.png")/
   link(rel="icon"             type="image/png"     sizes="16x16"   href=site_url+"/icons/favicon-16x16.png")/
@@ -67,18 +73,19 @@ mixin icons
 
 mixin manifest
   //- enable manifest if you're building a PWA Apps
-  link(rel="manifest" href!=`${site_url}/manifest.json?v=${version}`)/
+  link(rel="manifest" href!=`${site_url}/manifest.json?v=${v_v}`)/
 
-mixin logo
-  ._logo
-    a(href=home_url) #{site_title}
+//- ==============================================================
 
-mixin back_button
-  a(href="?back" onclick=onclick(js.goBack) title="Back to previous page")&attributes(attributes) 👈 Back
+mixin custom_body
+  |<!-- custom-body -->
+  +copyright
+  +credit
+  +themejs
+  +anchor
+  +google_analytics
 
-mixin gohome_button
-  a(href=home_url title="Go to Home Page")&attributes(attributes) Home
-
+//- ==============================================================
 mixin copyright
   ._copyright
     span._copyright_text| @ by #{author} !{year}
@@ -93,11 +100,7 @@ mixin theme_switch(title='Change Theme (Alt+T)')
 
 mixin themejs
   script|window.ghost='!{ghost}';
-  +js(`${site_url}/assets/themejs/themejs_v2.0.js?v=${version}`)
-
-mixin edit_link(path)
-  | This site is open source.
-  | #[a(href=`${source_url}/edit/main/_pugs/${path}.pug` target="_edit")| Improve this page].
+  +js(`${site_url}/assets/themejs/themejs_v2.0.js?v=${v_v}`)
 
 mixin anchor
   script(src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous")
@@ -122,24 +125,25 @@ mixin fouc
       });
     })();
 
-mixin custom_head
-  |<!-- custom-head -->
-  //- +fonts
-  //- +icons
-  //- +manifest
-
-mixin custom_body
-  |<!-- custom-body -->
-  +copyright
-  +credit
-  +themejs
-  +anchor
-  +google_analytics
-
+//- ==============================================================
 mixin _bull
   +l
   +itext|&bull;
   +l
+
+mixin logo
+  ._logo
+    a(href=home_url) #{site_title}
+
+mixin back_button
+  a(href="?back" onclick=onclick(js.goBack) title="Back to previous page")&attributes(attributes) 👈 Back
+
+mixin gohome_button
+  a(href=home_url title="Go to Home Page")&attributes(attributes) Home
+
+mixin edit_link(path)
+  | This site is open source.
+  | #[a(href=`${source_url}/edit/main/_pugs/${path}.pug` target="_edit")| Improve this page].
 
 mixin site_nav(sub)
   - sub_url = [home_url,sub].join('/')+'/'
@@ -153,9 +157,6 @@ mixin site_nav(sub)
   +_a(sub_url+"page.html")| Page
   +_a(sub_url+"404.html")| 404
 
-mixin site_footer_links
-  //- 
-
 mixin site_footer
   b !{author}'s
   +l
@@ -165,5 +166,3 @@ mixin site_footer
   +_a('https://github.com/techie-joe')| Profile
   +_bull
   +_a(['/nova/site/themejs'].join('/'))| ThemeJs
-
-//- ends
