--- a/_layouts/mallet.html
+++ b/_layouts/mallet.html
@@ -22,10 +22,11 @@ layout: mallet
     <main id="_main" class="_app __fadein">
       <div id="_layout" class="container-lg px-3 markdown-body">
         <header class="header"><nav id="_header-bar"><div class="_flex"><div class="_flex-main">
-          <div class="_logo"><a href="{{ site.github.url }}">{{ site.title }}</a></div>
+          <div class="_logo"><a href="{{ site.github.url }}">{{ site.title | '(untitled)' }}</a></div>
         </header>
         <nav class="_nav">
           {% if page.use_nav == false %}
+          <style>._nav{display:none !important}</style>
           {%- else %}
           <div><code>// nav</code></div>
           {%- endif %}
@@ -41,13 +42,10 @@ layout: mallet
           <div class="text-right text-gray">This site is open source. {% github_edit_link "Improve this page" %}.</div>
           {%- endif %}
           {%- endif %}
-        </div>
+        </footer>
       </div>
       <div class="_theme_switch _needjs">
-        <a class="_bt -h"
-          href="?change_theme"
-          title="Change theme (Ctrl+Alt+T)"
-          onclick="event.preventDefault();window.base?.theme.change();"><i class="_ico -svg"><svg viewBox="0 0 24 24"><path fill="currentColor" fill-opacity="1" d="M19,3H14V5H19V18L14,12V21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,18H5L10,12M10,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H10V23H12V1H10V3Z"></path></svg></i></a>
+        {% include theme_switch.html %}
       </div>
     </main>
     {% include custom-body.html %}
