update dove templates

--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,1 +1,1 @@
-<div class="_copyright"><span class="_copyright_text">@ by {{site.author||'Unknown'}} {{site.year||''}}</span></div>
+<div class="_copyright"><span class="_copyright_text">@ by {{ site.author | default: 'Unknown'}} {{ site.year | default: '' }}</span></div>
