--- a/_source/index.html.pug
+++ b/_source/index.html.pug
@@ -29,7 +29,7 @@ block content
     site_description     : !{site_description}
     site_url             : #[a._no_u(href=site_url)|!{site_url}]
     home_url             : #[a._no_u(href=home_url)|!{home_url}]
-    source               : #[a._no_u(href=source_url target="_edit") techie-joe/dove]
+    source_url           : #[a._no_u(href=source_url target="_edit") !{source_url}]
     version              : !{version}
     revision             : !{revision}
     ghost                : !{ghost}
