--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -1,4 +1,4 @@
-<link href="{{ site.github.url }}/assets/icons/apple-touch-icon.png?v={{ site.version || site.github.build_revision }}" rel="apple-touch-icon" type="image/png" sizes="180x180" />
-<link href="{{ site.github.url }}/assets/icons/favicon-32x32.png?v={{ site.version || site.github.build_revision }}" rel="icon" type="image/png" sizes="32x32" />
-<link href="{{ site.github.url }}/assets/icons/favicon-16x16.png?v={{ site.version || site.github.build_revision }}" rel="icon" type="image/png" sizes="16x16" />
-<link href="{{ site.github.url }}/assets/icons/favicon.ico?v={{ site.version || site.github.build_revision }}" rel="shortcut icon" type="image/x-icon" sizes="any" />
+<link href="{{ site.github.url }}/icons/apple-touch-icon.png" rel="apple-touch-icon" type="image/png" sizes="180x180" />
+<link href="{{ site.github.url }}/icons/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32" />
+<link href="{{ site.github.url }}/icons/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" />
+<link href="{{ site.github.url }}/icons/favicon.ico" rel="shortcut icon" type="image/x-icon" sizes="any" />
